--- a/flowlayout/build.gradle
+++ b/flowlayout/build.gradle
@@ -23,9 +23,9 @@ android {
 
 publish {
     userOrg = USER_ORG
-    groupId = GROUP_ID
-    artifactId = ARTIFACT_ID
-    publishVersion = PUBLISH_VERSION
+    groupId = 'com.microstrategy.m2020'
+    artifactId = project.name
+    publishVersion = 'SHOWLESS'
     desc = ''
 }
 
